Updated font size and location to fix ovelapping content on smaller screens

--- a/src/listwidget/_EqList.scss
+++ b/src/listwidget/_EqList.scss
@@ -34,9 +34,9 @@
       bottom: .33em;
       color: #666;
       display: block;
-      left: 2.5em;
+      left: 4.5em;
       position: absolute;
-      padding-left: 1em;
+      font-size: 0.8em;
     }
 
     > .aside {
@@ -45,7 +45,7 @@
       display: block;
       position: absolute;
       right: .33em;
-
+      font-size: 0.8em;
     }
   }
 }
